--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.002   2018-08-11 (PERLANCAR)
+
+	- Mark deprecated.
+
+	- [doc] Rephrase See Also, mention a few other modules.
+
+
 0.001    2018-08-07 (PERLANCAR)
 
          - First release.
