--- a/Changes
+++ b/Changes
@@ -1,10 +1,10 @@
-0.002   2018-08-11 (PERLANCAR)
+0.002   2018-08-11  Released-By: PERLANCAR
 
 	- Mark deprecated.
 
 	- [doc] Rephrase See Also, mention a few other modules.
 
 
-0.001    2018-08-07 (PERLANCAR)
+0.001    2018-08-07  Released-By: PERLANCAR
 
          - First release.
